--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
     </div>
   </nav>
 
-  
+  <!-- Overall grid container -->
+  <div class="container">
+
+  <!--Row 1-->
+  <div class="row">
+    <div class="col-sm-"12>
+      <h1>About Me</h1>
+    </div>
+  </div>
+
+  <!-- Row 2 -->
+  <div class="row">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorum perferendis voluptates error ullam placeat repellendus. Repellendus error repellat veritatis recusandae voluptates earum rerum consectetur itaque, ipsam nihil. Alias, nemo.</p>
+    </div>
+</div>
+
 </body>
 </html>
