--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
   </nav>
 
   <!-- Overall grid container -->
-<div class="container">
+<div class="small-middle-container">
 
   <!--Row 1-->
   <div class="row">
-    <div class="col-md-12 offset-2">
+    <div class="col-sm-12 offset-2">
       <h1>About Me</h1>
     </div>
   </div>
 
   <!-- Row 2 -->
   <div class="row">
-    <div class="col-md-6 offset-2">
+    <div class="col-sm-6 offset-2">
     <img class="bio-picture" src="https://scontent-bos3-1.xx.fbcdn.net/v/t1.0-9/10401_978388075965_1022385248731235329_n.jpg?_nc_cat=102&ccb=2&_nc_sid=09cbfe&_nc_ohc=m7-woA8byCEAX8S0JUj&_nc_ht=scontent-bos3-1.xx&oh=0ed8cfe2425d92e29e18661757668f6a&oe=5FFFA76C" alt="Laura Bullek">
     </div>
-    <div class="col-md-4">
+    <div class="col-sm-4">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorum perferendis voluptates error ullam placeat repellendus. Repellendus error repellat veritatis recusandae voluptates earum rerum consectetur itaque, ipsam nihil. Alias, nemo.</p>
     </div>
 </div>
