Added placeholder photos to portfolio.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </nav>
 
   <!-- Overall grid container -->
-<div class="small-middle-container">
+<div class="container">
 
   <!--Row 1-->
   <div class="row">
