--- a/portfolio.html
+++ b/portfolio.html
@@ -29,37 +29,37 @@
 
     <!--Row 1-->
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col">
         <h1 class="portfolio-title">Portfolio</h1>
       </div>
     </div>
   
     <!-- Row 2 -->
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col">
         <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
       </div>
-      <div class="col-sm-6">
+      <div class="col">
         <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
       </div>
     </div>
 
     <!-- Row 3 -->
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col">
         <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
       </div>
-      <div class="col-sm-6">
+      <div class="col">
         <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
       </div>
     </div>
 
     <!-- Row 4 -->
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col">
         <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
       </div>
-      <div class="col-sm-6">
+      <div class="col">
         <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
       </div>
     </div>
