Changed button class to "danger"

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="What Are Your Thoughts?"></textarea>
 
     <br><br>
-    <button type="submit" class="btn btn-primary">Submit Here</button>
+    <button type="submit" class="btn btn-danger">Out of Order!</button>
   </form>
   </div>
   </body>
