--- a/portfolio.html
+++ b/portfolio.html
@@ -37,31 +37,32 @@
     <!-- Row 2 -->
     <div class="row">
       <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
       </div>
       <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
       </div>
     </div>
 
     <!-- Row 3 -->
     <div class="row">
       <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
       </div>
       <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
       </div>
     </div>
 
     <!-- Row 4 -->
     <div class="row">
       <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
       </div>
       <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350"></a>
+        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
       </div>
     </div>
+  </div>  
 </body>
 </html>
