Added a new navbar to fix bugs

--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Laura Bullek</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>    
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="index.html">About Me</a>
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
-        <a class="nav-link" href="contact.html">Contact</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
@@ -31,18 +37,19 @@
 
       <!--Row 1-->
       <div class="row">
-        <div class="col-sm-12 offset-2">
-          <h1>About Me</h1>
+        <div class="col">
+          <h1 class="about-me">About Me</h1>
         </div>
       </div>
 
       <!-- Row 2 -->
       <div class="row">
-        <div class="col-sm-6 offset-2">
+        <div class="col">
           <img class="bio-picture" src="https://scontent-bos3-1.xx.fbcdn.net/v/t1.0-9/10401_978388075965_1022385248731235329_n.jpg?_nc_cat=102&ccb=2&_nc_sid=09cbfe&_nc_ohc=m7-woA8byCEAX8S0JUj&_nc_ht=scontent-bos3-1.xx&oh=0ed8cfe2425d92e29e18661757668f6a&oe=5FFFA76C" alt="Laura Bullek">
-        </div>
-        <div class="col-sm-4">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorum perferendis voluptates error ullam placeat repellendus. Repellendus error repellat veritatis recusandae voluptates earum rerum consectetur itaque, ipsam nihil. Alias, nemo.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorum perferendis voluptates error ullam placeat repellendus. Repellendus error repellat veritatis recusandae voluptates earum rerum consectetur itaque, ipsam nihil. Alias, nemo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorum perferendis voluptates error ullam placeat repellendus. Repellendus error repellat veritatis recusandae voluptates earum rerum consectetur itaque, ipsam nihil. Alias, nemo.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <p>At dolorum perferendis voluptates error ullam placeat repellendus. Repellendus error repellat veritatis recusandae voluptates earum rerum consectetur itaque, ipsam nihil. Alias, nemo. Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+          <p>Adipisci expedita accusamus qui ratione hic at distinctio sint exercitationem dignissimos voluptate molestias voluptates ex reiciendis quasi, sit nostrum, error rem provident. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi dolores tenetur incidunt in laudantium consequatur necessitatibus accusantium temporibus molestiae dicta laboriosam autem fuga maxime veniam iusto, assumenda praesentium. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aut earum ipsa reprehenderit, deleniti tempore nemo nihil cum facilis quaerat eveniet quas blanditiis? Quaerat, adipisci. Dolor, necessitatibus sint? Cum, quis.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque cum possimus quod laudantium eligendi ut ducimus. Repellat ullam ex quaerat assumenda corrupti. Nostrum debitis nemo quae, sequi vitae ea! Corporis!</p>
         </div>
       </div>
     </div>
