--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <!-- Metadata-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,53 +9,59 @@
     <!-- Bootstrap and CSS page links-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="style.css">
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Nav bar-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Laura Bullek</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html">About Me</a>
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-link" href="contact.html">Contact</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Laura Bullek</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="index.html">About Me</a>
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+              <a class="nav-link" href="contact.html">Contact</a>
+            </div>
           </div>
-        </div>
-    </div>
-  </nav>
+      </div>
+    </nav>
   
-  <!-- Container-->
-  <div class="container">
+    <!-- Overall grid container -->
+    <div class="container">
+
+    <!-- Form heading-->
     <div class="row">
       <h1>Contact</h1>
     </div>
     
     <!-- Form-->
     <form>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputEmail4">Name</label>
-        <input type="email" class="form-control" id="inputEmail4" placeholder="Name">
+      <!-- Form row 1-->  
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputEmail4">Name</label>
+          <input type="email" class="form-control" id="inputEmail4" placeholder="Name">
+        </div>
+        
+        <!-- Form row 2-->  
+        <div class="form-group col-md-6">
+          <label for="inputPassword4">Email</label>
+          <input type="password" class="form-control" id="inputPassword4" placeholder="Email">
+        </div>
       </div>
 
-      <div class="form-group col-md-6">
-        <label for="inputPassword4">Email</label>
-        <input type="password" class="form-control" id="inputPassword4" placeholder="Email">
+      <!-- Form row 3-->  
+      <div class="form-group">
+        <label for="exampleFormControlTextarea1">Write Your Message Here:</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="What Are Your Thoughts?"></textarea>
       </div>
-    </div>
 
-    <div class="form-group">
-      <label for="exampleFormControlTextarea1">Write Your Message Here:</label>
-      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="What Are Your Thoughts?"></textarea>
+      <br><br>
 
-    <br><br>
-    <button type="submit" class="btn btn-danger">Out of Order!</button>
-  </form>
-  </div>
+      <button type="button" class="btn btn-outline-danger">Out of Order!</button>
+    </form>
   </body>
 </html>
