Added social media links and reset sizes of all images

--- a/index.html
+++ b/index.html
@@ -74,10 +74,36 @@
   </section>
 
   <section class="social-media">
-    <img src="https://image.flaticon.com/icons/png/512/25/25231.png" href="https://github.com/Laura-Bullek" alt="github icon">
-    <img src="https://png.pngtree.com/element_our/png/20181011/linkedin-social-media-icon-design-template-vector-png_127000.jpg" href="https://www.linkedin.com/in/laura-bullek-95a97711b/" alt="linkedin icon">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Stack_Overflow_icon.svg/768px-Stack_Overflow_icon.svg.png" href="https://stackoverflow.com/users/14586431/laura-bullek" alt="stackoverflow icon">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <a href="https://github.com/Laura-Bullek"><img src="https://image.flaticon.com/icons/png/512/25/25231.png" alt="github icon"></a>
+      </div>
+      <div class="col-sm">
+        <a href="https://www.linkedin.com/in/laura-bullek-95a97711b/"><img src="https://image.flaticon.com/icons/png/512/61/61109.png" alt="linkedin icon"></a>
+      </div>
+      <div class="col-sm">
+        <a href="https://stackoverflow.com/users/14586431/laura-bullek"><img src="https://icons-for-free.com/iconfiles/png/512/stackoverflow-1321215626484539706.png"  alt="stackoverflow icon"></a>
+      </div>
+    </div>
+  </div>
   </section>
+
+  <section>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <p>See My Profile on GitHub</p>
+      </div>
+      <div class="col-sm">
+        <p>See My Profile on GitHub</p>
+      </div>
+      <div class="col-sm">
+        <p>Follow Me on LinkedIn</p>
+      </div>
+    </div>
+  </div>
+</section>
 
   <footer>      
   </footer>
