--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="index.html">About Me</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Meet Laura</a>
               <a class="nav-link" href="portfolio.html">Portfolio</a>
               <a class="nav-link" href="contact.html">Contact</a>
             </div>
