--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">About Me</a>
+            <a class="nav-link" href="index.html">Meet Laura</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -40,7 +40,7 @@
       <!--Row 1-->
       <div class="row">
         <div class="col">
-          <h1 class="about-me">About Me</h1>
+          <h1>About Me</h1>
         </div>
       </div>
 
