Added a sticky footer

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laura Bullek</title>
@@ -8,42 +8,43 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="Assets/style.css">
-</head>
-<body>
+  </head>
+
+  <body>
   <!--Navbar-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Laura Bullek</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Meet Laura</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <!--Navbar branding-->
+        <a class="navbar-brand" href="index.html">Laura Bullek</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Nav links to the rest of the pages-->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Meet Laura</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+         </ul>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 
   <!-- Overall grid container -->
   <section>
     <div class="container">
-
       <!--Row 1-->
       <div class="row">
         <div class="col">
           <h1>About Me</h1>
         </div>
       </div>
-
       <!-- Row 2 -->
       <div class="row">
         <div class="col">
@@ -73,39 +74,42 @@
     </div>
   </section>
 
+  <!-- Social media images-->
   <section class="social-media">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <a href="https://github.com/Laura-Bullek"><img src="https://image.flaticon.com/icons/png/512/25/25231.png" alt="github icon"></a>
-      </div>
-      <div class="col-sm">
-        <a href="https://www.linkedin.com/in/laura-bullek-95a97711b/"><img src="https://image.flaticon.com/icons/png/512/61/61109.png" alt="linkedin icon"></a>
-      </div>
-      <div class="col-sm">
-        <a href="https://stackoverflow.com/users/14586431/laura-bullek"><img src="https://icons-for-free.com/iconfiles/png/512/stackoverflow-1321215626484539706.png"  alt="stackoverflow icon"></a>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <a href="https://github.com/Laura-Bullek"><img src="https://image.flaticon.com/icons/png/512/25/25231.png" alt="github icon"></a>
+        </div>
+        <div class="col-sm">
+          <a href="https://www.linkedin.com/in/laura-bullek-95a97711b/"><img src="https://image.flaticon.com/icons/png/512/61/61109.png" alt="linkedin icon"></a>
+        </div>
+        <div class="col-sm">
+          <a href="https://stackoverflow.com/users/14586431/laura-bullek"><img src="https://icons-for-free.com/iconfiles/png/512/stackoverflow-1321215626484539706.png"  alt="stackoverflow icon"></a>
+        </div>
       </div>
     </div>
-  </div>
   </section>
 
+  <!-- Social media descriptions-->
   <section>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <p>See My Profile on GitHub</p>
-      </div>
-      <div class="col-sm">
-        <p>See My Profile on GitHub</p>
-      </div>
-      <div class="col-sm">
-        <p>Follow Me on LinkedIn</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <p>See My Profile on GitHub</p>
+       </div>
+        <div class="col-sm">
+          <p>See My Profile on GitHub</p>
+        </div>
+        <div class="col-sm">
+          <p>Follow Me on LinkedIn</p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-  <footer>      
+  <footer> 
+    <p>This is a footer</p>     
   </footer>
 </body>
 </html>
