Added sticky footer to each page

--- a/contact.html
+++ b/contact.html
@@ -64,4 +64,9 @@
       <button type="button" class="btn btn-outline-danger">Out of Order!</button>
     </form>
   </body>
+
+  <footer> 
+    <h6>Designed by Laura Bullek | 2020</h6>     
+  </footer>
+  
 </html>
