--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </section>
 
   <footer> 
-    <p>This is a footer</p>     
+    <h6>Designed by Laura Bullek | 2020</h6>     
   </footer>
 </body>
 </html>
