Removed anchors for portfolio pictures and updated comments/indents

--- a/contact.html
+++ b/contact.html
@@ -58,13 +58,12 @@
         <label for="exampleFormControlTextarea1">Write Your Message Here:</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="What Are Your Thoughts?"></textarea>
       </div>
-
       <br><br>
-
       <button type="button" class="btn btn-outline-danger">Out of Order!</button>
     </form>
   </body>
-
+ 
+  <!-- Footer-->
   <footer> 
     <h6>Designed by Laura Bullek | 2020</h6>     
   </footer>
