--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
   <head>
+    <!-- Metadata-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laura Bullek</title>
-    
-    <!-- CSS only -->
+
+    <!-- Links to Bootstrap and CSS page -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="Assets/style.css">
   </head>
@@ -107,9 +108,10 @@
         </div>
       </div>
     </section>
-
-    <footer> 
-      <h6>Designed by Laura Bullek | 2020</h6>     
-    </footer>
   </body>
+    <!-- Footer-->
+  <footer> 
+    <h6>Designed by Laura Bullek | 2020</h6>     
+  </footer>
+  
 </html>
