--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
+    <!-- Metadata-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+        
+    <!-- Links to Bootstrap and CSS page -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="Assets/style.css">
-</head>
-<body>
+  </head>
+
+  <body>
+    <!-- Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Laura Bullek</a>
@@ -24,50 +29,51 @@
         </div>
       </nav> 
 
-  <!-- Overall grid container -->
-  <div class="container">
+    <!-- Overall grid container -->
+    <div class="container">
 
     <!--Row 1-->
-    <div class="row">
-      <div class="col">
-        <h1 class="portfolio-title">Portfolio</h1>
+      <div class="row">
+        <div class="col">
+          <h1 class="portfolio-title">Portfolio</h1>
+        </div>
       </div>
-    </div>
   
     <!-- Row 2 -->
-    <div class="row">
-      <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
+      <div class="row">
+        <div class="col">
+          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
+        </div>
+        <div class="col">
+          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">       
+         </div>
       </div>
-      <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
-      </div>
-    </div>
 
-    <!-- Row 3 -->
-    <div class="row">
-      <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
+      <!-- Row 3 -->
+      <div class="row">
+        <div class="col">
+          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">
+        </div>
+        <div class="col">
+          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
+        </div>
       </div>
-      <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
-      </div>
-    </div>
 
-    <!-- Row 4 -->
-    <div class="row">
-      <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
+      <!-- Row 4 -->
+      <div class="row">
+        <div class="col">
+          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
+        </div>
+        <div class="col">
+          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
+        </div>
       </div>
-      <div class="col">
-        <a href="https://placeholder.com"><img src="https://via.placeholder.com/350" alt="Gray 350px placeholder"></a>
-      </div>
-    </div>
-  </div>  
-</body>
+    </div>  
+  </body>
 
-<footer> 
-  <h6>Designed by Laura Bullek | 2020</h6>     
-</footer>
+  <!-- Footer-->
+  <footer> 
+    <h6>Designed by Laura Bullek | 2020</h6>     
+  </footer>
 
 </html>
