Corrected email row on contact page

--- a/contact.html
+++ b/contact.html
@@ -43,13 +43,13 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="inputEmail4">Name</label>
-          <input type="email" class="form-control" id="inputEmail4" placeholder="Name">
+          <input type="email" class="form-control" placeholder="Name">
         </div>
         
         <!-- Form row 2-->  
         <div class="form-group col-md-6">
           <label for="inputPassword4">Email</label>
-          <input type="password" class="form-control" id="inputPassword4" placeholder="Email">
+          <input type="email" class="form-control" placeholder="Email">
         </div>
       </div>
 
@@ -67,5 +67,5 @@
   <footer> 
     <h6>Designed by Laura Bullek | 2020</h6>     
   </footer>
-  
+
 </html>
