Updated comments on all pages

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <!-- Overall grid container -->
     <section>
       <div class="container">
-        <!--Row 1-->
+        <!--Row 1 (Heading)-->
         <div class="row">
           <div class="col-sm">
             <h1>About Me</h1>
           </div>
         </div>
-        <!-- Row 2 -->
+        <!-- Row 2 (Main Content)-->
         <div class="row">
           <div class="col-sm">
             <img class="bio-picture" src="https://scontent-bos3-1.xx.fbcdn.net/v/t1.0-9/10401_978388075965_1022385248731235329_n.jpg?_nc_cat=102&ccb=2&_nc_sid=09cbfe&_nc_ohc=m7-woA8byCEAX8S0JUj&_nc_ht=scontent-bos3-1.xx&oh=0ed8cfe2425d92e29e18661757668f6a&oe=5FFFA76C" alt="Laura Bullek">
@@ -109,6 +109,7 @@
       </div>
     </section>
   </body>
+  
     <!-- Footer-->
   <footer> 
     <h6>Designed by Laura Bullek | 2020</h6>     
