--- a/portfolio.html
+++ b/portfolio.html
@@ -30,45 +30,47 @@
       </nav> 
 
     <!-- Overall grid container -->
-    <div class="container">
+    <section>
+      <div class="container">
 
-    <!--Row 1-->
-      <div class="row">
-        <div class="col">
-          <h1 class="portfolio-title">Portfolio</h1>
+      <!--Row 1 (Heading)-->
+        <div class="row">
+          <div class="col">
+            <h1 class="portfolio-title">Portfolio</h1>
+          </div>
         </div>
-      </div>
-  
-    <!-- Row 2 -->
-      <div class="row">
-        <div class="col">
-          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
-        </div>
-        <div class="col">
-          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">       
-         </div>
-      </div>
 
-      <!-- Row 3 -->
-      <div class="row">
-        <div class="col">
-          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">
+      <!-- Row 2 (Two placeholder images)-->
+        <div class="row">
+          <div class="col">
+            <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
+          </div>
+          <div class="col">
+            <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">       
+            </div>
         </div>
-        <div class="col">
-          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
-        </div>
-      </div>
 
-      <!-- Row 4 -->
-      <div class="row">
-        <div class="col">
-          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
+        <!-- Row 3 (Two placeholder images)-->
+        <div class="row">
+          <div class="col">
+            <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">
+          </div>
+          <div class="col">
+            <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
+          </div>
         </div>
-        <div class="col">
-          <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
+
+        <!-- Row 4 (Two placeholder images) -->
+        <div class="row">
+          <div class="col">
+            <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
+          </div>
+          <div class="col">
+            <img src="https://via.placeholder.com/350" alt="Gray 350px placeholder">        
+          </div>
         </div>
       </div>
-    </div>  
+    </section>  
   </body>
 
   <!-- Footer-->
