--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </section>
 
     <!-- Social media images-->
-    <section class="social-media">
+    <div class="social-media">
       <div class="container">
         <div class="row">
           <div class="col-sm">
@@ -90,10 +90,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <!-- Social media descriptions-->
-    <section>
       <div class="container">
         <div class="row">
           <div class="col-sm">
@@ -107,12 +106,11 @@
           </div>
         </div>
       </div>
-    </section>
-  </body>
-  
-    <!-- Footer-->
-  <footer> 
-    <h6>Designed by Laura Bullek | 2020</h6>     
-  </footer>
-  
+
+          <!-- Footer-->
+    <footer> 
+      <h6>Designed by Laura Bullek | 2020</h6>     
+    </footer>
+    
+   </body>
 </html>
