Corrected validation errors on Contact page

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
           <!-- Form row 1-->  
           <div class="form-row">
             <div class="form-group col-md-6">
-              <label for="inputEmail4">Name</label>
+              <label for="inputEmail4" input id="inputEmail4">Name</label>
               <input type="email" class="form-control" placeholder="Name">
             </div>
             
@@ -55,7 +55,7 @@
 
           <!-- Form row 3-->  
           <div class="form-group">
-            <label for="exampleFormControlTextarea1">Write Your Message Here:</label>
+            <label for="exampleFormControlTextarea1" input id="exampleFormControlTextarea1">Write Your Message Here:</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="What Are Your Thoughts?"></textarea>
           </div>
           <br><br>
@@ -67,7 +67,7 @@
     <footer> 
       <h6>Designed by Laura Bullek | 2020</h6>     
     </footer>
-    
+
   </body>
 
 </html>
