--- a/contact.html
+++ b/contact.html
@@ -43,13 +43,13 @@
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="inputEmail4">Name</label>
-              <input type="email" class="form-control" placeholder="Name">
+              <input type="email" class="form-control" id="inputEmail4" placeholder="Name">
             </div>
             
             <!-- Form row 2-->  
             <div class="form-group col-md-6">
               <label for="inputPassword4">Email</label>
-              <input type="email" class="form-control" placeholder="Email">
+              <input type="email" class="form-control" id=inputPassword4 placeholder="Email">
             </div>
           </div>
 
