--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
   </head>
 
   <body>
+    <h1 class="ml5">
+      <span class="text-wrapper">
+        <span class="line line1"></span>
+        <span class="letters letters-left">Laura</span>
+        <span class="letters ampersand"> | </span>
+        <span class="letters letters-right">Bullek</span>
+        <span class="line line2"></span>
+      </span>
+    </h1>
     
+
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
@@ -113,5 +123,7 @@
       <h6>Designed by Laura Bullek | 2020</h6>     
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="Assets/javascript.js"></script>
    </body>
 </html>
